<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypeset="xml"?>
<package format="3">
  <name>simple_bringup</name>
  <version>1.0.0</version>
  <description>Launch files for simplified single camera navigation stack</description>
  <maintainer email="user@example.com">ROS User</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>simple_slam</exec_depend>
  <exec_depend>simple_nav2</exec_depend>
  <exec_depend>simple_clouds</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
